More folders... I don't trust git.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /.vs/Learning/FileContentIndex/948156f3-79b4-4fd7-986e-dd43a71f8c91.vsidx
 /.vs/slnx.sqlite
 /.vs/VSWorkspaceState.json
+/.vs/Learning/FileContentIndex
